# IC-Vibathon

./: CHANGELOG.md  Cargo.toml  dfx.json  package-lock.json  package.json
.github/instructions/: EVM-canister-doc
.husky/: pre-commit
src/backend/: Cargo.toml
src/backend/src/: bridge.rs  lib.rs
src/frontend/src/: App.tsx
src/frontend/src/components/: AllLiquidityList.tsx  BuyUSDCForm.tsx  MetaMaskConnect.tsx  MyLiquidityList.tsx  ProvideLiquidityForm.tsx
src/frontend/src/services/: liquidityService.ts  metamaskService.ts
src/frontend/src/views/: LiquidityDashboard.tsx
tests/src/: bridge.test.ts
