[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
ic-llm = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# If using ic-alloy for EVM helpers:
alloy = { git = "https://github.com/ic-alloy/ic-alloy.git", tag = "v0.3.5-icp.1", features = ["icp"]}
getrandom = { version = "0.2.15", features = ["custom"] }
base64ct = "=1.7.2"